# -Handwritten-Digit-Recognizer-MNIST-Dataset-

./: Handwritten Digit Recognizer.ipynb  README.md  client.html  mnist-recognize.h5  mnist-recognize.h5.old  mnist-recognize.h5.old2  mnist-recognize.h5.old3  notebook20a06ac1f7(1).ipynb  pyproject.toml  server.py
templates/: index.html
