[tool.poetry]
name = "mnist-recognizer"
version = "0.1.0"
description = ""
authors = ["AusAura"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
Flask = "^3.0.0"
numpy = "^1.26.2"
keras = "2.15.0"
tensorflow = "2.15.0"
tensorflow-io = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
